@@ -12,7 +12,6 @@ public class ThreadContext {
     public static ThreadLocal<List<EventPublishStatusObject>> events = new ThreadLocal<>();
 
     public static <T> void registerEvent(T event) {
-        initEventThread();
         List<EventPublishStatusObject> eventList = events.get();
         eventList.add(new EventPublishStatusObject(event));
     }
@@ -33,7 +32,7 @@ public class ThreadContext {
                 .filter(EventPublishStatusObject::isNotPublished)
                 .forEach(eventPublishStatusObject -> {
                     eventPublishStatusObject.publish();
-                    SpringApplicationEventPublisher.registerEvent(eventPublishStatusObject.event);
+                    SpringApplicationEventPublisher.registerEvent(eventPublishStatusObject.getEvent());
                 });
     }
 
@@ -48,7 +47,7 @@ public class ThreadContext {
         List<EventPublishStatusObject> eventList = events.get();
         List<EventPublishStatusObject> filteredEventList =
                 eventList.stream().filter(eventPublishStatusObject ->
-                        unmodifiableList.contains(eventPublishStatusObject.event)).collect(Collectors.toList());
+                        unmodifiableList.contains(eventPublishStatusObject.getEvent())).toList();
         eventList.removeAll(filteredEventList);
     }
 
